@startuml

class Case {
    -caseNumber: String
    -caseTitle: String
    -caseType: String
    -partiesInvolved: List<String>
    +addCase(): void
    +updateCase(): void
    +deleteCase(): void
}

class Client {
    -clientName: String
    -contactInfo: String
    -caseHistory: List<Case>
    +addClient(): void
    +updateClient(): void
}

class User {
    -username: String
    -password: String
    +login(): boolean
    +logout(): void
}

class Document {
    -documentName: String
    -filePath: String
    +uploadDocument(): void
    +retrieveDocument(): void
}

class Hearing {
    -hearingDate: Date
    -courtRoom: String
    +scheduleHearing(): void
    +setReminder(): void
}

Client "1" -- "0..*" Case : tracks
User "1" -- "0..*" Case : manages
Case "1" -- "0..*" Document : contains
Case "1" -- "0..*" Hearing : schedules

@enduml
